# netbox-interface-synchronization

./: COMPATIBILITY.md  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
netbox_interface_sync/: __init__.py  forms.py  template_content.py  urls.py  views.py
netbox_interface_sync/templates/netbox4_interface_sync/: compare_interfaces_button.html  interface_comparison.html
netbox_interface_synchronization/: __init__.py  comparison.py  forms.py  template_content.py  urls.py  utils.py  views.py
netbox_interface_synchronization/templates/netbox_interface_synchronization/: compare_components_button.html  components_comparison.html  interface_comparison.html  number_of_interfaces_panel.html
